@@ -77,6 +77,7 @@ Template for new versions:
 - ``script-manager``: new ``get_mod_info_metadata()`` function for getting information out of mod ``info.txt`` files
 
 ## Removed
+- removed historically unused ``Core::RegisterData``/``Core::GetData`` API and associated internal data structures
 
 # 51.11-r1.2
 
